--- a/src/index.scss
+++ b/src/index.scss
@@ -21,7 +21,7 @@ body {
   color: $grey;
   font-size: 16px;
   line-height: 1.5;
-
+  background-color: #eceff2;
 }
 #root{
   display: flex;
@@ -30,4 +30,5 @@ body {
 }
 main{
   flex: 1;
+  padding: 100px;
 }
