--- a/src/index.scss
+++ b/src/index.scss
@@ -32,3 +32,10 @@ main{
   flex: 1;
   padding: 100px;
 }
+
+button{
+  outline: none;
+  border: none;
+  color: inherit;
+  font-family: inherit;
+}
