--- a/src/index.scss
+++ b/src/index.scss
@@ -11,6 +11,10 @@ a{
   color:$black;
   text-decoration: none;
 }
+input{
+  border: none;
+  outline: none;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
